# bc3_ml_web

./: .gitignore  README.md  pyproject.toml  run_web.sh
backend/: calc_api.py  config.py  exceptions.py  logging_config.py  main.py  main_original.py  schemas.py
backend/routers/: calc.py  files.py  frontend.py  ml.py  records.py  upload.py
backend/services/: bc3_service.py  file_service.py  ml_service.py  registry_service.py
frontend/: calc-test.html  calc-v2.html  calc-v2.js  categorized-v2.html  classify-v2.html  classify-v2.js  debug.html  grouped-v2.html  grouped-v2.js  index-v2.html  script-v2.js  styles-tailwind.css  tree-utils.js  upload-v2.html  upload-v2.js
frontend/labeler/: labeler.html  labeler.js
temp/: json_ml_cat.py  predict_linear.py
tools/: _bc3_converter.py  bc3_converter.py  bc3_pcalc.py  mdb.py
