[project]
name = "web"
version = "0.1.0"
description = ""
authors = [
    {name = "romheat",email = "romheat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.53.2,<5.0.0)",
    "pymongo (>=4.14.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "backend"}]

[tool.poetry.scripts]
backend = "backend.main:main"
start = "backend.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
